# debate-ai

./: .env.example  .gitignore  BOT_VOICE_INTEGRATION.md  CHANGELOG.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_STATUS.txt  DEPLOYMENT_VISUAL_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  FEATURES_SUMMARY.txt  FINAL_STATUS.md  FINAL_UPDATE_v2.md  GITHUB_PUBLICATION_GUIDE.md  ISSUE_RESOLUTION.md  ISSUE_SUMMARY.txt  LICENSE  LIVE_NOW.md  OLLAMA_QUICK_REFERENCE.txt  OLLAMA_SETUP.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  QUICK_ACCESS.md  QUICK_DEPLOY.md  README.md  README_DEPLOYMENT.md  SAFARI_FIX_SUMMARY.md  SETUP_GUIDE.md  START_HERE.md  STREAMLIT_CLOUD_DEPLOY.md  TEST_COMPLETION_REPORT.md  TROUBLESHOOTING.md  UPDATE_V2_GUIDE.md  UPGRADE_SUMMARY.md  VOICE_DEBATE_FEATURE.md  deploy.sh  (+13 more)
.github/workflows/: ci.yml  release.yml
trillm_arena/: __init__.py  api.py  app.py  app.py.backup  app_v2.py  database.py  debate_engine.py  debate_engine_iterative.py  fact_bot.py  llm.py  llm.py.backup  local_worker.py  model_config.py  monitor.py  prompts.py  voice.py
